--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/desc-dir-tecnica-gog/desc-dir-tecnica-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/desc-dir-tecnica-gog/desc-dir-tecnica-gog.component.html
@@ -43,11 +43,12 @@
 
     <app-form-descuentos-gog    [solicitudPagoFaseCriterio]="solicitudPagoFaseCriterio"
                                 [listaCriterios]="listaCriterios"
-                                [solicitudPagoFaseFacturaDescuento]="this.solicitudPagoFaseFactura.solicitudPagoFaseFacturaDescuento"
+                                [solicitudPagoFaseFacturaDescuento]="solicitudPagoFaseFacturaDescuento"
                                 [valorNetoGiro]="listData.valorNetoGiro"
                                 [solicitudPago]="solicitudPago"
                                 [esVerDetalle]="esVerDetalle"
                                 [esPreconstruccion]="esPreconstruccion"
+                                [solicitudPagoFase]="solicitudPagoFase"
                                 (tieneObservacion)="tieneObservacion.emit( true )">
     </app-form-descuentos-gog>
 </section>
