--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/desc-dir-tecnica-gog/desc-dir-tecnica-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/desc-dir-tecnica-gog/desc-dir-tecnica-gog.component.html
@@ -48,7 +48,6 @@
                                 [solicitudPago]="solicitudPago"
                                 [esVerDetalle]="esVerDetalle"
                                 [esPreconstruccion]="esPreconstruccion"
-                                [solicitudPagoFase]="solicitudPagoFase"
-                                (tieneObservacion)="tieneObservacion.emit( true )">
+                                [solicitudPagoFase]="solicitudPagoFase">
     </app-form-descuentos-gog>
 </section>
