--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-generar-orden-giro/form-generar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-generar-orden-giro/form-generar-orden-giro.component.html
@@ -77,7 +77,7 @@
             <app-accordion-detalle-giro-gog [solicitudPago]="solicitudPago"
                                             [esVerDetalle]="esVerDetalle"
                                             [proyecto]="proyecto"
-                                            (estadoSemaforo)="checkSemaforoDetalle( $event )">
+                                            (estadoSemaforo)="proyecto.semaforoDetalle = $event">
             </app-accordion-detalle-giro-gog>
         </mat-expansion-panel>
 
