--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
@@ -140,10 +140,12 @@
           class="btn-table"
           [disabled]="
             element.proyecto.estadoProyectoObraCodigo == null||
-            element.proyecto.estadoProyectoObraCodigo == 1 ||
-            element.proyecto.estadoProyectoObraCodigo == 2 ||
-            element.proyecto.estadoProyectoObraCodigo == 3 ||
-            element.proyecto.estadoProyectoObraCodigo == 4
+            (
+              element.proyecto.estadoProyectoObraCodigo != 4 &&
+              element.proyecto.estadoProyectoObraCodigo != 6 &&
+              element.proyecto.estadoProyectoObraCodigo != 8 &&
+              estaEditando
+            )
           "
         >
           Observaciones
@@ -168,9 +170,12 @@
           class="btn-table"
           [disabled]="
             element.proyecto.estadoProyectoInterventoriaCodigo == null||
-            (element.proyecto.estadoProyectoInterventoriaCodigo == 3  && estaEditando)||
-            (element.proyecto.estadoProyectoInterventoriaCodigo == 5  && estaEditando)||
-            (element.proyecto.estadoProyectoInterventoriaCodigo == 7  && estaEditando)
+            (
+              element.proyecto.estadoProyectoInterventoriaCodigo != 4 &&
+              element.proyecto.estadoProyectoInterventoriaCodigo != 6 &&
+              element.proyecto.estadoProyectoInterventoriaCodigo != 8 &&
+              estaEditando
+            )
           "
         >
           Observaciones
