--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/observaciones/observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/observaciones/observaciones.component.html
@@ -1,4 +1,4 @@
-<section *ngIf="esVerDetalle !== undefined">
+<section>
     <mat-card class="shipping-card border">
         <mat-card-header class="header-card">
             <mat-card-title class="header-card--text card-title-detalle">
@@ -10,6 +10,7 @@
         </mat-card-content>
     </mat-card>
 
+    <!--
     <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
         <mat-card class="shipping-card border" align="left" *ngIf="observacionVerificar !== undefined">
             <mat-card-header class="header-card">
@@ -143,4 +144,5 @@
             </table>
         </section>
     </ng-template>
+    -->
 </section>
