--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/detalle-giro/detalle-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/detalle-giro/detalle-giro.component.html
@@ -89,6 +89,7 @@
 
     </mat-expansion-panel>
 
+    <!--
     <mat-expansion-panel class="expansion-style sub-expansion">
         <mat-expansion-panel-header class="expansion-style--header">
             <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : listaSemaforos.semaforoEstrategiaPago">
@@ -101,10 +102,6 @@
                 <p><b>Estrategia de pagos: </b> <i> {{ getEstrategiaPago( solicitudPago.ordenGiro.ordenGiroDetalle[ 0 ].ordenGiroDetalleEstrategiaPago[ 0 ].estrategiaPagoCodigo ) }} </i> </p>
             </mat-card-content>
         </mat-card>
-
-        <!--
-            Observacion al acordeon 'Estrategia de pagos'
-        -->
 
         <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
             <mat-card class="shipping-card border" align="left">
@@ -212,11 +209,12 @@
             </section>
         </ng-template>
     </mat-expansion-panel>
+    -->
 
-    <div *ngFor="let solicitudPagoFase of solicitudPago.solicitudPagoRegistrarSolicitudPago[ 0 ].solicitudPagoFase; index as i">
+    <div *ngFor="let solicitudPagoFase of proyecto.fases; index as i">
         <mat-expansion-panel class="expansion-style sub-expansion" *ngIf="checkTieneDescuentos( solicitudPagoFase.esPreconstruccion )">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : solicitudPagoFase.esPreconstruccion === true ? listaSemaforos.semaforoDireccionTecnica : listaSemaforos.semaforoDescuentosDireccionTecnicaConstruccion">
+                <mat-panel-title class="expansion-style--title">
                     Descuentos Dirección Técnica - {{ solicitudPagoFase.esPreconstruccion === true ? 'Fase 1' : 'Fase 2' }}
                 </mat-panel-title>
             </mat-expansion-panel-header>
@@ -224,23 +222,24 @@
             <app-descuentos-direccion-tecnica   [esVerDetalle]="esVerDetalle"
                                                 [esRegistroNuevo]="esRegistroNuevo"
                                                 [solicitudPago]="solicitudPago"
-                                                [esPreconstruccion]="solicitudPagoFase.esPreconstruccion"
-                                                (estadoSemaforo)="solicitudPagoFase.esPreconstruccion === true ? listaSemaforos.semaforoDireccionTecnica = $event : listaSemaforos.semaforoDescuentosDireccionTecnicaConstruccion = $event; estadoSemaforo.emit( this.listaSemaforos )">
+                                                [solicitudPagoFase]="solicitudPagoFase"
+                                                [esPreconstruccion]="solicitudPagoFase.esPreconstruccion">
             </app-descuentos-direccion-tecnica>
         </mat-expansion-panel>
     
         <mat-expansion-panel class="expansion-style sub-expansion">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : solicitudPagoFase.esPreconstruccion === true ? listaSemaforos.semaforoTerceroCausacion : listaSemaforos.semaforoTerceroCausacionConstruccion">
+                <mat-panel-title class="expansion-style--title">
                     Tercero de causación - {{ solicitudPagoFase.esPreconstruccion === true ? 'Fase 1' : 'Fase 2' }}
                 </mat-panel-title>
             </mat-expansion-panel-header>
     
+
             <app-tercero-causacion  [esVerDetalle]="esVerDetalle"
                                     [esRegistroNuevo]="esRegistroNuevo"
                                     [solicitudPago]="solicitudPago"
-                                    [esPreconstruccion]="solicitudPagoFase.esPreconstruccion"
-                                    (estadoSemaforo)="solicitudPagoFase.esPreconstruccion === true ? listaSemaforos.semaforoTerceroCausacion = $event : listaSemaforos.semaforoTerceroCausacionConstruccion = $event; estadoSemaforo.emit( this.listaSemaforos )">
+                                    [solicitudPagoFase]="solicitudPagoFase"
+                                    [esPreconstruccion]="solicitudPagoFase.esPreconstruccion">
             </app-tercero-causacion>
         </mat-expansion-panel>
     </div>
@@ -257,34 +256,5 @@
         </div>
 
         <app-form-origen [solicitudPago]="solicitudPago"></app-form-origen>
-    </mat-expansion-panel>
-
-    <mat-expansion-panel class="expansion-style sub-expansion">
-        <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : listaSemaforos.semaforoObservaciones">
-                Observaciones
-            </mat-panel-title>
-        </mat-expansion-panel-header>
-
-        <app-observaciones  [esVerDetalle]="esVerDetalle"
-                            [esRegistroNuevo]="esRegistroNuevo"
-                            [solicitudPago]="solicitudPago"
-                            (estadoSemaforo)="listaSemaforos.semaforoObservaciones = $event">
-        </app-observaciones>
-    </mat-expansion-panel>
-
-    <mat-expansion-panel class="expansion-style sub-expansion">
-        <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : listaSemaforos.semaforoSoporte">
-                Soporte de orden de giro
-            </mat-panel-title>
-        </mat-expansion-panel-header>
-
-        <app-soporte-orden-giro [esVerDetalle]="esVerDetalle"
-                                [esRegistroNuevo]="esRegistroNuevo"
-                                [solicitudPago]="solicitudPago"
-                                *ngIf="solicitudPago.ordenGiro.ordenGiroDetalle[ 0 ].ordenGiroSoporte.length > 0"
-                                (estadoSemaforo)="listaSemaforos.semaforoSoporte = $event">
-        </app-soporte-orden-giro>
     </mat-expansion-panel>
 </mat-accordion>
